--- a/django/company/templates/company/base.html
+++ b/django/company/templates/company/base.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <br><br>
-    <div class="container-lg">
+    <div class="container-lg pb-4">
         <div class="row">
             <div class="col-9">
                 {% if messages %}
