--- a/django/dealer/templates/dealer/materials_list.html
+++ b/django/dealer/templates/dealer/materials_list.html
@@ -3,6 +3,7 @@
     Materials
 {% endblock %}
 {% block content %}
+<h2 class="display-4 pb-3">Materials List</h2>
 <div class="row">
     <div class="col-8">
         <ul class="list-group">
