--- a/django/dealer/templates/dealer/materials_list.html
+++ b/django/dealer/templates/dealer/materials_list.html
@@ -13,7 +13,7 @@
                         <a href="#" class="btn btn-danger btn-sm">delete</a>
                 </li>
             {% empty %}
-                <li class="list-group-item text-light">No items yet</li>
+                <li class="list-group-item">No items yet</li>
             {% endfor %}
         </ul>
     </div>
