company side request system

--- a/django/company/templates/company/company_dashboard.html
+++ b/django/company/templates/company/company_dashboard.html
@@ -22,5 +22,21 @@
             </div>
         </div>
     </div>
+    <div class="col-3">
+        <div class="card">
+            <div class="card-body">
+                <h3 class="card-title pb-3">Order Materials</h3>
+                <a href="{% url 'order-projects' %}" class="btn btn-primary">Order</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-3">
+        <div class="card">
+            <div class="card-body">
+                <h3 class="card-title pb-3">Manage site Er</h3>
+                <a href="{% url 'under-construction' %}" class="btn btn-primary">Manage</a>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
