--- a/django/company/templates/company/order_past_request.html
+++ b/django/company/templates/company/order_past_request.html
@@ -1,11 +1,11 @@
 {% extends "company/base.html" %}
 {% load crispy_forms_tags %}
 {% block title %}
-    Request List
+    Past Request
 {% endblock %}
 {% block content %}
     <h3 class="display-3">Past Requests</h3>
-    <div class="row my-5 justify-center-around">
+    <div class="row my-3 justify-center-around">
         <div class="col-6">
             <table class="table table-striped table-hover">
                 <thead>
@@ -15,6 +15,7 @@
                         <th scope='col'>Quantity</th>
                         <th scope='col'>Unit</th>
                         <th scope="col">State</th>
+                        <th scope="col">SiteEr</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -25,15 +26,16 @@
                         <td>{{ bill_item.quantity }}</td>
                         <td>{{ bill_item.unit }}</td>
                         <td>{{ bill_item.get_state_display }}</td>
+                        <td>{{ bill_item.site_er.user.username }}</td>
                     </tr>
                     {% empty %}
                     <tr>
-                        <th scope="row" colspan="4" class="table-active"> No items avilable </th>
+                        <th scope="row" colspan="6" class="table-active"> No items avilable </th>
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
-            <a href="{% url 'siteer-dashboard' %}" class="btn btn-outline-secondary">Back to dashboard</a>
+            <a href="{% url 'order-projects' %}" class="btn btn-outline-secondary mt-2">Back to Project List</a>
         </div>
     </div>
 {% endblock %}
